@@ -61,7 +61,7 @@ int get_key_value(const char *name, struct key_input *input);
 /* Looks for a key binding first in the given map, then in the generic map, and
  * lastly in the default keybindings. */
 enum request get_keybinding(struct keymap *keymap, struct key_input *input);
-void add_keybinding(struct keymap *table, enum request request, struct key_input *input);
+enum status_code add_keybinding(struct keymap *table, enum request request, struct key_input *input);
 
 const char *get_keys(struct keymap *keymap, enum request request, bool all);
 #define get_view_key(view, request) get_keys(&(view)->ops->keymap, request, FALSE)
@@ -85,7 +85,7 @@ struct run_request {
 };
 
 struct run_request *get_run_request(enum request request);
-bool add_run_request(struct keymap *keymap, struct key_input *input, const char **argv, enum run_request_flag flags);
+enum status_code add_run_request(struct keymap *keymap, struct key_input *input, const char **argv, enum run_request_flag flags);
 
 #endif
 /* vim: set ts=8 sw=8 noexpandtab: */
