@@ -58,6 +58,7 @@ Improvements:
  - Support view specific colors: `color stage.diff-add yellow default`.
  - Add grep view as a front-end to git-grep(1): `tig grep -p strchr`. From
    within Tig, the key for switching or grepping is bound to 'G' by default.
+ - Warn about conflicting keybindings using Ctrl, e.g. `^f` and `^F`. (GH #218)
 
 Bug fixes:
 
